MyFirstProject/src/objects/Customer__c.object
<CustomObject>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Address__c</fullName>
        <label>Address</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Amount__c</fullName>
        <label>Amount</label>
        <precision>10</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <label>Country</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>India</fullName>
                </value>
                <value>
                    <fullName>US</fullName>
                </value>
                <value>
                    <fullName>UK</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CustomerId__c</fullName>
        <displayFormat>ID{00000}</displayFormat>
        <externalId>true</externalId>
        <label>CustomerId</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Intrest__c</fullName>
        <label>Intrest</label>
        <summaryFilterItems>
            <field>BankDetails__c.Name</field>
            <operation>equals</operation>
            <value>Citi</value>
        </summaryFilterItems>
        <summaryForeignKey>BankDetails__c.CustomerId__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Mobile__c</fullName>
        <label>Mobile</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <label>State</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Country__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Tamil Nadu</fullName>
                </value>
                <value>
                    <fullName>California</fullName>
                </value>
                <value>
                    <fullName>Great Britain</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>create__c</fullName>
        <label>create</label>
        <type>Date</type>
    </fields>
    <label>Customer</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Mobile__c</columns>
        <columns>create__c</columns>
        <columns>Address__c</columns>
        <columns>Intrest__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>CustomerRecord_Customer</fullName>
        <filterScope>Queue</filterScope>
        <label>CustomerRecord</label>
        <queue>CustomerRecord</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <nameField>
        <label>Customer Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Customers</pluralLabel>
    <recordTypes>
        <fullName>CustomerRecord</fullName>
        <active>true</active>
        <label>CustomerRecord</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>